changes to the directory

--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-Hello, world
+< !DOCTYPE html > < html lang = "en" > < head >
+
+<!-- Basic Page Needs
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<
+meta charset = "utf-8" > < title > Quizzar < /title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="/ / fonts.googleapis.com / css ? family = Raleway : 400, 300, 600 " rel="
+stylesheet " type="
+text / css ">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="
+stylesheet " href="
+css / normalize.css ">
+  <link rel="
+stylesheet " href="
+css / skeleton.css ">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="
+icon " type="
+image / png " href="
+images / favicon.png ">
+
+</head>
+<body>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="
+container ">
+    <div class="
+row ">
+      <div class="
+one - half column " style="
+margin - top: 25 % ">
+        <h1>Welcome to Quizzar!</h1>
+        <h4>Test your Javascript Knowledge!</h4>
+        <p>This application tests your knowledge of Javascript! To get started just click on the get started button.
+        <br/>
+        Note that once you click the submit button, No changes can be made.
+        <br/>
+        Goodluck!</p>
+        <!--<input class="
+u - full - width " type="
+text " placeholder="
+Name " id="
+nameinput ">-->
+        <div id= "
+getstarted "><button><a href="
+quiz.html "> Get Started </a></button></div>
+      </div>
+    </div>
+  </div>
+  <div class="
+footer ">
+    <p>Created by Stephen Ajose For the Funaab Post UTME Practice</p>
+  </div>
+</body>
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
+</html>
